--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </head>
 
     <body>
-
+        <header></header>
+        <section></section>
+        <footer></footer>
 
 
         <script src="assets/js/jquery.min.js"></script>
