--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Levani Jincharadze | Web Developer</title>
-
+        <!-- favicon -->
+        <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+        <!-- css files -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
 
     <body>
-        <header></header>
+        <header>
+            <div class="container-fluid">
+                
+            </div>
+        </header>
         <section></section>
         <footer></footer>
 
