--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Levani Jincharadze | Web Developer</title>
         <!-- favicon -->
         <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+        <!--font awesome -->
+        <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
         <!-- css files -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
@@ -13,18 +15,29 @@
     </head>
 
     <body>
-        <header>
-            <div class="container-fluid">
-                
+        <!-- header -->
+        <header id="particles">
+            <div class="container text-center">  
+                <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
+                <h4>Levani Jincharadze <i class="fa fa-code"></i> Web Developer</h4>
             </div>
         </header>
-        <section></section>
+
+        <!-- main section -->
+        <section>
+            <div class="container">
+
+            </div>
+        </section>
+
+        <!-- footer -->
         <footer></footer>
 
 
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/particles.js"></script>
         <script src="assets/js/site.js"></script>
     </body>
 </html>
