--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <body>
         <!-- header -->
-        <header id="particles">
-            <div class="container text-center">  
+        <header  id="particles-js">
+            
+            <div class="text-center">  
                 <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
                 <h4>Levani Jincharadze <i class="fa fa-code"></i> Web Developer</h4>
             </div>
