--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </head>
 
     <body>
+        <div class="particles-js"></div>
         <!-- header -->
-        <header  id="particles-js">
-            
+        <header>
             <div class="text-center">  
                 <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
                 <h4>Levani Jincharadze <i class="fa fa-code"></i> Web Developer</h4>
