--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </head>
 
     <body>
-        <div class="particles-js"></div>
+        <div id="particles-js"></div>
         <!-- header -->
         <header>
-            <div class="text-center">  
+            <div class="text-center mt-5">  
                 <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
                 <h4>Levani Jincharadze <i class="fa fa-code"></i> Web Developer</h4>
             </div>
@@ -27,7 +27,8 @@
         <!-- main section -->
         <section>
             <div class="container">
-
+                <!-- work experiance -->
+                <div class=""></div>
             </div>
         </section>
 
