--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>levani jincharadze</title>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
 
 
