--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     
 </body>
 
+    <div class="main-c container text-center">
+        <img src="assets/images/logo.png" class="img-fluid" alt="logo">
+    </div>
 
 
 <!--js files -->
