--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Levani Jincharadze</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css.bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.min.css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 </head>
 <body>
     
-</body>
-
-    <div class="main-c container text-center">
-        <img src="assets/images/logo.png" class="img-fluid" alt="logo">
+    <div class="main-c container d-flex justify-content-center align-items-center">
+        <div class="logo-bg d-flex  align-items-center">
+            <img src="assets/images/logo.png" class="logo mx-auto d-block" alt="logo">
+        </div>
     </div>
 
-
 <!--js files -->
-<script type="text/javascript" src="assets/js/jquery.slim.min.js"></script>
-<script type="text/javascript" src="assets/js/popper.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script src="main.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.slim.min.js"></script>
+    <script type="text/javascript" src="assets/js/popper.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
