--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
 </head>
 <body>
-    
     <div class="main-c container d-flex justify-content-center align-items-center">
-        <div class="logo-bg d-flex  align-items-center">
-            <img src="assets/images/logo.png" class="logo mx-auto d-block" alt="logo">
+        <div class="logo-bg d-flex justify-content-center align-items-center mx-auto">
+            <img src="assets/images/logo.png" class="logo mx-auto d-block img-fluid" alt="logo">
         </div>
     </div>
 
