Implement Google Consent Mode and update Cookie Consent handling for user privacy compliance

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6SLY8EJRE"></script>
+    <!-- Google Consent Mode v2 -->
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
+        
+        // Default consent mode - denied until user accepts
+        gtag('consent', 'default', {
+            'ad_storage': 'denied',
+            'ad_user_data': 'denied',
+            'ad_personalization': 'denied',
+            'analytics_storage': 'denied'
+        });
+    </script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6SLY8EJRE"></script>
+    <script>
         gtag('js', new Date());
-
         gtag('config', 'G-E6SLY8EJRE');
     </script>
 
